[gd_scene load_steps=2 format=3 uid="uid://enemy_status"]

[ext_resource type="Script" path="res://scripts/ui/enemy_status_ui.gd" id="1_enemy"]

[node name="EnemyStatusUI" type="Control"]
custom_minimum_size = Vector2(220, 85)
layout_mode = 3
anchors_preset = 0
offset_right = 220.0
offset_bottom = 85.0
script = ExtResource("1_enemy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = -3.0
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Ï†Å Ïù¥Î¶Ñ"
theme_override_font_sizes/font_size = 18

[node name="ShieldRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ShieldIcon" type="Label" parent="VBox/ShieldRow"]
layout_mode = 2
text = "üõ°"
theme_override_font_sizes/font_size = 20

[node name="ShieldLabel" type="Label" parent="VBox/ShieldRow"]
layout_mode = 2
text = "3"
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.3, 0.9, 0.9, 1)

[node name="WeaknessContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BreakLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
text = "BREAK!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
